--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "prove01": "nodemon prove01.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "ejs": "^2.5.6",
     "express": "^4.17.1",
     "express-handlebars": "^3.0.2",
+    "mongoose": "^5.12.9",
     "nodemon": "^2.0.7",
     "pug": "^2.0.4"
   },
