--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
     "prove01": "nodemon prove01.js"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "connect-mongodb-session": "^2.4.1",
     "cors": "^2.8.5",
+    "csurf": "^1.11.0",
     "ejs": "^2.5.6",
     "express": "^4.17.1",
     "express-handlebars": "^3.0.2",
+    "express-session": "^1.17.2",
     "mongoose": "^5.12.9",
     "nodemon": "^2.0.7",
     "pug": "^2.0.4"
