--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "express-handlebars": "^3.0.2",
     "express-session": "^1.17.2",
     "mongoose": "^5.12.9",
+    "nodemailer": "^6.6.1",
+    "nodemailer-sendgrid-transport": "^0.2.0",
     "nodemon": "^2.0.7",
     "pug": "^2.0.4"
   },
