--- a/package.json
+++ b/package.json
@@ -21,11 +21,12 @@
     "express": "^4.17.1",
     "express-handlebars": "^3.0.2",
     "express-session": "^1.17.2",
+    "express-validator": "^6.11.1",
     "mongoose": "^5.12.9",
     "nodemailer": "^6.6.1",
     "nodemailer-sendgrid-transport": "^0.2.0",
     "nodemon": "^2.0.7",
-    "pug": "^2.0.4"
+    "pug": "^3.0.2"
   },
   "devDependencies": {
     "request": "^2.81.0",
