--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "connect-mongodb-session": "^2.4.1",
     "cors": "^2.8.5",
     "csurf": "^1.11.0",
+    "dotenv": "^10.0.0",
     "ejs": "^2.5.6",
     "express": "^4.17.1",
     "express-handlebars": "^3.0.2",
