--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express-session": "^1.17.2",
     "express-validator": "^6.11.1",
     "mongoose": "^5.12.9",
+    "node-fetch": "^2.6.1",
     "nodemailer": "^6.6.1",
     "nodemailer-sendgrid-transport": "^0.2.0",
     "nodemon": "^2.0.7",
